<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <Button
        android:id="@+id/profile"
        android:layout_width="match_parent"
        android:layout_height="114dp"
        android:text="@string/main_profile" />

    <Button
        android:id="@+id/gyms"
        android:layout_width="match_parent"
        android:layout_height="114dp"
        android:text="@string/main_gyms" />

    <Button
        android:id="@+id/instructors"
        android:layout_width="match_parent"
        android:layout_height="114dp"
        android:text="@string/main_instructors" />

    <Button
        android:id="@+id/session"
        android:layout_width="match_parent"
        android:layout_height="114dp"
        android:text="@string/main_sessions" />

</LinearLayout>